--- a/backend/users/templates/test.html
+++ b/backend/users/templates/test.html
@@ -9,40 +9,37 @@
   <body>
 	<div class="row">
 	<div class="mx-auto col-10 col-md-8 col-lg-6">
-	<nav class="navbar bg-primary" data-bs-theme="dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="navbar-nav">
-				<a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
-				<a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
-				<a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
-				<a class="nav-link disabled">Profile</a>
+		<nav class="navbar bg-primary" data-bs-theme="dark">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">Navbar</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav">
+				  <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+				  <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
+				  <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
+				  <a class="nav-link disabled">Profile</a>
+				</div>
+			  </div>
 			</div>
-			</div>
-		</div>
-	</nav>
+		</nav>
 
-    <h1>Register</h1>
+	<h1>Login</h1>
 	<form action="", method="POST">
 		<div class="mb-3">
 			<label for="username" class="form-label">Username</label>
 			<input type="text" name="username" class="form-control" id="username" aria-describedby="usernameHelp">
-		  </div>
-		<div class="mb-3">
-		  <label for="email" class="form-label">Email address</label>
-		  <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp">
 		</div>
 		<div class="mb-3">
 		  <label for="password" class="form-label">Password</label>
 		  <input type="password" name="password" class="form-control" id="password">
 		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
+		<button type="submit" class="btn btn-primary", name="button">Submit</button>
 		{{ form.csrf_token }}
 	</form>
+
 	</div>
 	</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
