--- a/backend/map_routes/templates/route.html
+++ b/backend/map_routes/templates/route.html
@@ -49,7 +49,7 @@
 
     {% else %}
 
-    Addd Route Button
+    <a href="{{ url_for('map_routes.add_route') }}">Add Route</a>
     <div class="row justify-content-center">
 
       {% for user in user_added_routes %}
