--- a/backend/map_routes/templates/route_add.html
+++ b/backend/map_routes/templates/route_add.html
@@ -41,50 +41,109 @@
         </div>
     </nav>
 
-    <div class="mx-auto col-10 col-md-8 col-lg-6">
-    <form action="", method="POST">
-        <h3>Starting Point</h3>
-		<div class="mb-3">
-			<label for="start_street_address" class="form-label">Street Address</label>
-			<input type="text" name="start_street_address" class="form-control" id="start_street_address" aria-describedby="usernameHelp">
-		  </div>
-		<div class="mb-3">
-		  <label for="start_city_name" class="form-label">City Name</label>
-		  <input type="text" name="start_city_name" class="form-control" id="start_city_name" aria-describedby="citynameHelp">
-		</div>
-		<div class="mb-3">
-		  <label for="start_postal_code" class="form-label">Postal Code (optional)</label>
-		  <input type="text" name="start_postal_code" class="form-control" id="start_postal_code">
-		</div>
-        <div class="mb-3">
-            <label for="start_country_name" class="form-label">Country</label>
-            <input type="text" name="start_country_name" class="form-control" id="start_country_name">
-        </div>
+    {% block content %}
 
-        <h3>Destination</h3>
-		<div class="mb-3">
-			<label for="stop_street_address" class="form-label">Street Address</label>
-			<input type="text" name="stop_street_address" class="form-control" id="stop_street_address" aria-describedby="usernameHelp">
-		  </div>
-        <div class="row">
-		<div class="mb-4">
-		  <label for="stop_city_name" class="form-label">City Name</label>
-		  <input type="text" name="stop_city_name" class="form-control" id="stop_city_name" aria-describedby="citynameHelp">
-		</div>
+    {% if message == "get_form" %}
+      <div class="mx-auto col-10 col-md-8 col-lg-6">
+      <h2>Add route information below</h2>
+        <form action="" method="POST">
+            <h3>Starting Point</h3>
         <div class="mb-3">
-            <label for="stop_country_name" class="form-label">Country</label>
-            <input type="text" name="stop_country_name" class="form-control" id="stop_country_name">
+          <label for="start_street_address" class="form-label">Street Address</label>
+          <input type="text" name="start_street_address" class="form-control" id="start_street_address" aria-describedby="usernameHelp">
+          </div>
+        <div class="mb-3">
+          <label for="start_city_name" class="form-label">City Name</label>
+          <input type="text" name="start_city_name" class="form-control" id="start_city_name" aria-describedby="citynameHelp">
         </div>
+        <div class="mb-3">
+          <label for="start_postal_code" class="form-label">Postal Code (optional)</label>
+          <input type="text" name="start_postal_code" class="form-control" id="start_postal_code">
         </div>
-		<div class="mb-3">
-		  <label for="stop_postal_code" class="form-label">Postal Code (optional)</label>
-		  <input type="text" name="stop_postal_code" class="form-control" id="stop_postal_code">
-		</div>
-
-		<button type="submit" class="btn btn-primary">Submit</button>
-		{{ form.csrf_token }}
-	</form>
+            <div class="mb-3">
+                <label for="start_country_name" class="form-label">Country</label>
+                <input type="text" name="start_country_name" class="form-control" id="start_country_name">
+            </div>
+    
+            <h3>Destination</h3>
+        <div class="mb-3">
+          <label for="stop_street_address" class="form-label">Street Address</label>
+          <input type="text" name="stop_street_address" class="form-control" id="stop_street_address" aria-describedby="usernameHelp">
+          </div>
+            <div class="row">
+        <div class="mb-4">
+          <label for="stop_city_name" class="form-label">City Name</label>
+          <input type="text" name="stop_city_name" class="form-control" id="stop_city_name" aria-describedby="citynameHelp">
+        </div>
+            <div class="mb-3">
+                <label for="stop_country_name" class="form-label">Country</label>
+                <input type="text" name="stop_country_name" class="form-control" id="stop_country_name">
+            </div>
+            </div>
+        <div class="mb-3">
+          <label for="stop_postal_code" class="form-label">Postal Code (optional)</label>
+          <input type="text" name="stop_postal_code" class="form-control" id="stop_postal_code">
+        </div>
+    
+        <button type="submit" class="btn btn-primary">Submit</button>
+        {{ form.csrf_token }}
+      </form>
     </div>
+
+    {% elif message != ""  %}
+      <div class="mx-auto col-10 col-md-8 col-lg-6">
+        <h2>{{ message }}</h2>
+        <form action="" method="POST">
+            <h3>Starting Point</h3>
+        <div class="mb-3">
+          <label for="start_street_address" class="form-label">Street Address</label>
+          <input type="text" name="start_street_address" class="form-control" id="start_street_address" aria-describedby="usernameHelp">
+          </div>
+        <div class="mb-3">
+          <label for="start_city_name" class="form-label">City Name</label>
+          <input type="text" name="start_city_name" class="form-control" id="start_city_name" aria-describedby="citynameHelp">
+        </div>
+        <div class="mb-3">
+          <label for="start_postal_code" class="form-label">Postal Code (optional)</label>
+          <input type="text" name="start_postal_code" class="form-control" id="start_postal_code">
+        </div>
+            <div class="mb-3">
+                <label for="start_country_name" class="form-label">Country</label>
+                <input type="text" name="start_country_name" class="form-control" id="start_country_name">
+            </div>
+    
+            <h3>Destination</h3>
+        <div class="mb-3">
+          <label for="stop_street_address" class="form-label">Street Address</label>
+          <input type="text" name="stop_street_address" class="form-control" id="stop_street_address" aria-describedby="usernameHelp">
+          </div>
+            <div class="row">
+        <div class="mb-4">
+          <label for="stop_city_name" class="form-label">City Name</label>
+          <input type="text" name="stop_city_name" class="form-control" id="stop_city_name" aria-describedby="citynameHelp">
+        </div>
+            <div class="mb-3">
+                <label for="stop_country_name" class="form-label">Country</label>
+                <input type="text" name="stop_country_name" class="form-control" id="stop_country_name">
+            </div>
+            </div>
+        <div class="mb-3">
+          <label for="stop_postal_code" class="form-label">Postal Code (optional)</label>
+          <input type="text" name="stop_postal_code" class="form-control" id="stop_postal_code">
+        </div>
+    
+        <button type="submit" class="btn btn-primary">Submit</button>
+        {{ form.csrf_token }}
+      </form>
+    </div>
+
+    {% else %}
+
+      Route added successfully!
+
+    {% endif %}
+
+    {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
