--- a/backend/map_routes/templates/route_add.html
+++ b/backend/map_routes/templates/route_add.html
@@ -19,7 +19,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Routes</a>
+                <a class="nav-link" href="{{ url_for('map_routes.routes') }}">Routes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
