--- a/backend/map_routes/templates/route_simluator.html
+++ b/backend/map_routes/templates/route_simluator.html
@@ -13,7 +13,7 @@
   </body>
   <script>
     const elem = document.getElementById("evnt");
-    const evtSource = new EventSource("/routes/stream");
+    const evtSource = new EventSource("/routes/stream/{{ route_id }}");
     evtSource.onmessage = (event) => {
       elem.innerHTML = `message: ${event.data}`;
     };
