--- a/backend/map_routes/templates/route_runner.html
+++ b/backend/map_routes/templates/route_runner.html
@@ -55,15 +55,16 @@
       </div>
     </div>
   </nav>
+  <div id="completion-msg">
+  </div>
   <div id="map">
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
   {% block javascript %}
   <script>
-    const route = {{ routejson }};
     const route_id = "{{ route_data.id }}";
-    var last_position = {{ route_data.last_position_index }};
+    var latest_position = {{ route_data.last_position }};
   </script>
   {% endblock %}
   <script src="{{ url_for('map_routes.static', filename='runner.js') }}"></script>
